# dapla-toolbelt-automation

./: .cookiecutter.json  .cruft.json  CONTRIBUTING.md  README.md  SECURITY.md  backstage.yaml  flake.nix  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
shared_data/: backstage.yaml
source_data/: backstage.yaml
src/dapla_toolbelt_automation/: __init__.py  pubsub.py
tests/: __init__.py  test_pubsub.py
