[project]
name = "dapla-toolbelt-automation"
version = "1.1.1"
description = "Dapla Toolbelt Automation"
authors = [{ name = "Dapla Developers", email = "dapla-platform-developers@ssb.no" }]
maintainers = [{ name = "Statistics Norway, Data enablement Department (724)" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
]
dependencies = [
    "click>=8.0.1",
    "google-cloud-pubsub>=2.14.1",
    "google-cloud-storage>=2.7.0",
    "pytest>=8.4.2",
]

[project.urls]
homepage = "https://github.com/statisticsnorway/dapla-toolbelt-automation"
repository = "https://github.com/statisticsnorway/dapla-toolbelt-automation"
documentation = "https://statisticsnorway.github.io/dapla-toolbelt-automation"
Changelog = "https://github.com/statisticsnorway/dapla-toolbelt-automation/releases"

[project.scripts]
dapla-toolbelt-automation = "dapla_toolbelt_automation.__main__:main"

[dependency-groups]
dev = [
    "pygments>=2.10.0",
    "black[jupyter]>=23.1.0",
    "coverage[toml]>=6.2",
    "darglint>=1.8.1",
    "furo>=2021.11.12",
    "mypy>=0.930",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "ruff>=0.0.284",
    "pytest>=6.2.5",
    "sphinx>=6.2.1",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-click>=3.0.2",
    "typeguard>=2.13.3",
    "xdoctest[colors]>=0.15.10",
    "myst-parser>=0.16.1",
    "deptry>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["dapla_toolbelt_automation", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.deptry.per_rule_ignores]
DEP001 = ["nox"]  # packages available by default

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Silence missing stubs for Google Cloud libs
module = [
    "gcsfs.*",
    "fsspec.*",
    "responses.*",
    "tomli.*",
    "google.*",
    "google.cloud.*",
    "tests.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_calls = false


[tool.ruff]
force-exclude = true  # Apply excludes to pre-commit
show-fixes = true
src = ["src", "tests"]
target-version = "py311"  # Minimum Python version supported
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
extend-exclude = [
    "__pycache__",
    "old",
    ".ipynb_checkpoints",
    "noxfile.py",
    "docs/conf.py",
]

# Ruff rules may be customized as desired: https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
select = [
    "A",   # prevent using keywords that clobber python builtins
    "ANN", # check type annotations
    "B",   # bugbear: security warnings
    "D",   # documentation
    "E",   # pycodestyle
    "F",   # pyflakes
    "ISC", # implicit string concatenation
    "I",   # sort imports
    "UP",  # alert you when better syntax is available in your python version
    "RUF", # the ruff developer's own rules
]
ignore = [
    "ANN101", # Supress missing-type-self.
    "ANN102", # Supress missing-type-cls.
    "ANN202", # Don't requiere return type annotation for private functions.
    "ANN401", # Allow type annotation with type Any.
    "D100",   # Supress undocumented-public-module. Only doc of public api required.
    "E402",   # Supress module-import-not-at-top-of-file, needed in jupyter notebooks.
    "E501",   # Supress line-too-long warnings: trust black's judgement on this one.
    "UP007",  # ADDED MANUALLY - makes it possible to use the Optional[] syntax
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pydocstyle]
convention = "google"  # You can also use "numpy".

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "validator", "root_validator", "pydantic.validator"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"**/tests/*" = [
    "ANN001",  # type annotations don't add value for test functions
    "ANN002",  # type annotations don't add value for test functions
    "ANN003",  # type annotations don't add value for test functions
    "ANN201",  # type annotations don't add value for test functions
    "ANN204",  # type annotations don't add value for test functions
    "ANN205",  # type annotations don't add value for test functions
    "ANN206",  # type annotations don't add value for test functions
    "D100",    # docstrings are overkill for test functions
    "D101",
    "D102",
    "D103",
    "S101",    # asserts are encouraged in pytest
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
